2001-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el (read-string): Don't modify the value of
	`current-load-list' when advising it.

	* mime-w3m.el (mime-w3m-remove-text-properties): Don't modify the
	value of `current-load-list' when advising the function `kill-new';
	add a doc-string.

	* w3m.el (w3m-decode-entities): Save-match-data when
	`w3m-entity-value' is called.

2001-10-03  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-xmas.el (w3m-detect-coding-region): Return just the return
	value of `detect-coding-with-priority' if it is not a list, again.

2001-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el (read-string): Advise the function to allow the 4th
	argument `default-value'.

2001-10-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mime-w3m.el (mime-w3m-remove-text-properties): New advice to
	protect `kill-ring-save' against the `local-map' text property.

2001-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el (w3m-detect-coding-region): Use the fixed value for
	the list of coding-categories; suppress the duplication of coding-
	categories.
	(TopLevel): Protect against non-existent coding-systems when
	creating the modern coding-systems.
	(w3m-om-coding-category-alist): Reinforce the default value.
	(w3m-om-coding-categories): Abolish.
	(w3m-om-coding-system-alist): Add some new coding-systems.

	* w3m-fsf.el (w3m-detect-coding-region): Suppress the duplication
	of coding-categories.
	* w3m-xmas.el (w3m-detect-coding-region): Ditto;
	use `coding-system-category' instead of `coding-system-type'.

2001-10-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-show-inline-images-before-hook,
	w3m-show-inline-images-after-hook,
	w3m-remove-inline-images-before-hook,
	w3m-remove-inline-images-after-hook): Abolished.
	(w3m-modeline-image-status-on): New constant.
	(w3m-modeline-image-status-off): Ditto.
	(w3m-image-only-page): New buffer local variable.
	(w3m-display-inline-image-status): Abolished.